# spark-web-app-runtime

./: .gitignore  CMakeLists.txt  spark-webapp-runtime.pro  translate_generation.sh  translate_update.sh
debian/: changelog  control  copyright  rules  spark-webapp-runtime.postinst  spark-webapp-runtime.prerm
spark-webapp-runtime/: application.cpp  application.h  globaldefine.h  main.cpp  mainwindow.cpp  mainwindow.h  spark-webapp-runtime.pro  webenginepage.cpp  webenginepage.h  webengineview.cpp  webengineview.h  widget.cpp  widget.h
spark-webapp-runtime/resources/: resources.qrc
spark-webapp-runtime/translations/: spark-webapp-runtime_zh_CN.qm  spark-webapp-runtime_zh_CN.ts
src/: CMakeLists.txt  application.cpp  application.h  main.cpp  mainwindow.cpp  mainwindow.h  spark-webapp-runtime.pro  src.cmake  webenginepage.cpp  webengineurlrequestinterceptor.cpp  webengineurlrequestinterceptor.h  webengineview.cpp  widget.cpp
src/resources/css/: webkit-scrollbar.css
translations/: CMakeLists.txt  spark-webapp-runtime_zh_CN.ts
